Updated work experience and added summary, also added new programming language

--- a/index.html
+++ b/index.html
@@ -1,50 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume Website</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
-</head>
-<body>
-    <aside class="sidebar">
-        <nav class="menu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="achievements.html">Achievements</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-            </ul>
-        </nav>
-        <div class="social-media">
-            <!-- Social media links -->
-            <a href="https://www.linkedin.com/in/diehan-drotschie-168a781b3/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href = "mailto: diehandrotschie@gmail.com" target = "_blank"> <i class = "fa fa-envelope"></i></a>
-        </div>
-    </aside>
-    <main>
-        <section id="intro">
-            <h1>Diehan Drotschie</h1>
-            <h2>Computer science student</h2>
-            <!-- Link to download resume-->
-            <a href = "https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/DiehanCV.pdf">
-            <button class="btn"><i class="fa fa-download"></i> Resume</button>
-            </a>
-            <!-- Image of me -->
-            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/pfp.jpg?raw=true" id = "pfpimage" >  
-        </section>
-        <section id="about">
-            <h2>About Me</h2>
-            <ul>
-                <li>Nationality: South African</li>
-                <li>Age: 20 yrs</li>
-                <li>Sex: Male</li>
-                <li>Criminal Record: None</li>
-                <li>Health: Excellent</li>
-            </ul>
-        </section>
-
-    </main>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Resume Website</title>
+        <link rel="stylesheet" href="style.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        />
+    </head>
+    <body>
+        <aside class="sidebar">
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="achievements.html">Achievements</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                </ul>
+            </nav>
+            <div class="social-media">
+                <!-- Social media links -->
+                <a
+                    href="https://www.linkedin.com/in/diehan-drotschie-168a781b3/"
+                    target="_blank"
+                    ><i class="fab fa-linkedin-in"></i
+                ></a>
+                <a href="mailto: diehandrotschie@gmail.com" target="_blank">
+                    <i class="fa fa-envelope"></i
+                ></a>
+            </div>
+        </aside>
+        <main>
+            <section id="intro">
+                <h1>Diehan Drotschie</h1>
+                <h2>Computer science student</h2>
+                <!-- Link to download resume-->
+                <a
+                    href="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/DiehanCV.pdf"
+                >
+                    <button class="btn">
+                        <i class="fa fa-download"></i> Resume
+                    </button>
+                </a>
+                <!-- Image of me -->
+                <img
+                    src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/pfp.jpg?raw=true"
+                    id="pfpimage"
+                />
+            </section>
+            <section id="summary">
+                <h2>Summary</h2>
+                <p>
+                    Dedicated and proactive Computer Science student with a
+                    strong foundation in software engineering principals and
+                    practices. Demonstrated ability to excel in both academic
+                    and practical setting, with experience in developing robust
+                    software solutions and participating in real-world projects.
+                    Proficient in various programming languages and frameworks,
+                    and commited to continuous learning and improvement.
+                </p>
+            </section>
+            <section id="about">
+                <h2>About Me</h2>
+                <ul>
+                    <li>Nationality: South African</li>
+                    <li>Age: 20 yrs</li>
+                    <li>Sex: Male</li>
+                    <li>Criminal Record: None</li>
+                    <li>Health: Excellent</li>
+                </ul>
+            </section>
+            <section id="experience">
+                <h2>Work experience</h2>
+                <h3>
+                    Software engineering internship at Games Global: June 2024 -
+                    July 2024
+                </h3>
+                <p></p>
+                <p>
+                    <br />
+                    During my internship at Games Global, I contributed to the
+                    development of interactive gameplay features as a software
+                    developer. I collaborated with a talented team, gaining
+                    valuable hands-on experience in game development.
+                </p>
+            </section>
+        </main>
+    </body>
 </html>
