--- a/portfolio.html
+++ b/portfolio.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-</head>
-<body>
-    <aside class="sidebar">
-        <nav class="menu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="achievements.html">Achievements</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-            </ul>
-        </nav>
-        <div class="social-media">
-            <!-- Social media links -->
-            <a href = "https://www.linkedin.com/in/diehan-drotschie-168a781b3/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href = "mailto: diehandrotschie@gmail.com" target = "_blank"> <i class = "fa fa-envelope"></i></a>
-        </div>
-    </aside>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Projects Portfolio</title>
+        <link rel="stylesheet" href="style.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        />
+    </head>
+    <body>
+        <aside class="sidebar">
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="achievements.html">Achievements</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                </ul>
+            </nav>
+            <div class="social-media">
+                <!-- Social media links -->
+                <a
+                    href="https://www.linkedin.com/in/diehan-drotschie-168a781b3/"
+                    target="_blank"
+                    ><i class="fab fa-linkedin-in"></i
+                ></a>
+                <a href="mailto: diehandrotschie@gmail.com" target="_blank">
+                    <i class="fa fa-envelope"></i
+                ></a>
+            </div>
+        </aside>
 
         <main>
             <!-- Main heading-->
-        <header id="intro">
-            <h1>Projects portfolio</h1>
-        </header>
+            <header id="intro">
+                <h1>Projects portfolio</h1>
+            </header>
             <!-- Section for Programming languages-->
-            <section id = "programming_lang">
+            <section id="programming_lang">
                 <h2>Programming Languages</h2>
                 <ul>
                     <li>Java</li>
@@ -40,86 +49,139 @@
                     <li>R</li>
                     <li>Dart with Firebase</li>
                     <li>Delphi</li>
-
+                    <li>Javascript and PIXI.js</li>
                 </ul>
-
             </section>
 
             <!-- Section for tic tac toe game -->
-        <section id = "tictactoe">
-            <h2>Tic Tac Toe</h2>
-            <p>This is a very basic tic tac toe game made with java. It checks who won them game when you play and the asks you afterwards 
-                if you wan to play again.
-            </p>
-            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/tictactoe.jpg?raw=true" id = "tictactoeimg">  
-        </section>
+            <section id="tictactoe">
+                <h2>Tic Tac Toe</h2>
+                <p>
+                    This is a very basic tic tac toe game made with java. It
+                    checks who won them game when you play and the asks you
+                    afterwards if you wan to play again.
+                </p>
+                <img
+                    src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/tictactoe.jpg?raw=true"
+                    id="tictactoeimg"
+                />
+            </section>
             <!--Section for impasse game-->
-        <section id = "impasse">
-            <h2>Impasse game</h2>
-            <p>
-                This is a game with board of set size blocks such as 8 x 8 and where you have either 2 or 3 different colours. You then have to
-                pick a color for each block following a set of rules till you have assigned a colour to each block in the grid while not violating
-                any of the rules.
-            </p>
-             <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/imp1.jpg?raw=true" id = "imp1">  
-            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/imp2.jpg?raw=true" id = "imp2">  
-
-        </section>
-
-            <!--Section for Moving maze game-->
-        <section id = "moving_maze">
-            <h2>Moving maze game</h2>
-            <p>
-                This game start with 4 players each in one corner of a maze where the maze size is specief before the game such as 3 x 3 grid. The goal
-                is for each player to collect their tokens that are scattered around the maze then return to their starting corner. Each player also has to
-                push a block into the maze which can cause the maze to change before they move.
-            </p>
-            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/mvz.jpg?raw=true" id = "mvz">  
-
-        </section>
-
-            <!--Section for compression and decompression software-->
-        <section id = "cmpsoft">
-            <h2>Compression and Decompression Software</h2>
-            <p>This Software reads in a text file then uses a finite autonoma algorithm to calculate which pixels should be black or white for decompression
-                It also takes a image then compresses it into a text file with all the information needed to decompress it again with the finite autonoma.
-            </p>
-            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/decsoft.jpg?raw=true" id = "decsoftimg">  
-
-        </section>
-
-        <!-- Wedding table website-->
-        <section id = "wedtable">
-            <h2>Wedding table allocation website</h2>
-            <p>This Website takes in input of the name and surname of a guest to the wedding then searches for the person in a .json file.
-                It then displays the person and their date's name if they have a date and then also their table number.
-            </p>
-            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/wedding1.jpg?raw=true" id = "wed1im">  
-            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/wedding2.jpg?raw=true" id = "wed2im">  
-
-        </section>
-
-        <!--Section for instagram clone app -->
-        <section id = "insta_clone">
-            <h2>Instagram clone app with certain functionality</h2>
-            <p>This app is a small project to learn dart with Firebase. It is a clone of instagram that has some of the functionality such as uploading images
-                commenting, liking, following other people and searching for other people.
-            </p>
-
-            <section class="image-scroll-container">
-                <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios1.jpg?raw=true" >
-                <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios2.jpg?raw=true">
-                <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios3.jpg?raw=true">
-                <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios4.jpg?raw=true" >
-                <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios5.jpg?raw=true" >
-                <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios6.jpg?raw=true" >
-                <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios7.jpg?raw=true" >
-                <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios8.jpg?raw=true" >
-                <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios9.jpg?raw=true" >
-                <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios10.jpg?raw=true" >
+            <section id="impasse">
+                <h2>Impasse game</h2>
+                <p>
+                    This is a game with board of set size blocks such as 8 x 8
+                    and where you have either 2 or 3 different colours. You then
+                    have to pick a color for each block following a set of rules
+                    till you have assigned a colour to each block in the grid
+                    while not violating any of the rules.
+                </p>
+                <img
+                    src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/imp1.jpg?raw=true"
+                    id="imp1"
+                />
+                <img
+                    src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/imp2.jpg?raw=true"
+                    id="imp2"
+                />
             </section>
 
-        </section>
+            <!--Section for Moving maze game-->
+            <section id="moving_maze">
+                <h2>Moving maze game</h2>
+                <p>
+                    This game start with 4 players each in one corner of a maze
+                    where the maze size is specief before the game such as 3 x 3
+                    grid. The goal is for each player to collect their tokens
+                    that are scattered around the maze then return to their
+                    starting corner. Each player also has to push a block into
+                    the maze which can cause the maze to change before they
+                    move.
+                </p>
+                <img
+                    src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/mvz.jpg?raw=true"
+                    id="mvz"
+                />
+            </section>
+
+            <!--Section for compression and decompression software-->
+            <section id="cmpsoft">
+                <h2>Compression and Decompression Software</h2>
+                <p>
+                    This Software reads in a text file then uses a finite
+                    autonoma algorithm to calculate which pixels should be black
+                    or white for decompression It also takes a image then
+                    compresses it into a text file with all the information
+                    needed to decompress it again with the finite autonoma.
+                </p>
+                <img
+                    src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/decsoft.jpg?raw=true"
+                    id="decsoftimg"
+                />
+            </section>
+
+            <!-- Wedding table website-->
+            <section id="wedtable">
+                <h2>Wedding table allocation website</h2>
+                <p>
+                    This Website takes in input of the name and surname of a
+                    guest to the wedding then searches for the person in a .json
+                    file. It then displays the person and their date's name if
+                    they have a date and then also their table number.
+                </p>
+                <img
+                    src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/wedding1.jpg?raw=true"
+                    id="wed1im"
+                />
+                <img
+                    src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/wedding2.jpg?raw=true"
+                    id="wed2im"
+                />
+            </section>
+
+            <!--Section for instagram clone app -->
+            <section id="insta_clone">
+                <h2>Instagram clone app with certain functionality</h2>
+                <p>
+                    This app is a small project to learn dart with Firebase. It
+                    is a clone of instagram that has some of the functionality
+                    such as uploading images commenting, liking, following other
+                    people and searching for other people.
+                </p>
+
+                <section class="image-scroll-container">
+                    <img
+                        src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios1.jpg?raw=true"
+                    />
+                    <img
+                        src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios2.jpg?raw=true"
+                    />
+                    <img
+                        src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios3.jpg?raw=true"
+                    />
+                    <img
+                        src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios4.jpg?raw=true"
+                    />
+                    <img
+                        src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios5.jpg?raw=true"
+                    />
+                    <img
+                        src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios6.jpg?raw=true"
+                    />
+                    <img
+                        src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios7.jpg?raw=true"
+                    />
+                    <img
+                        src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios8.jpg?raw=true"
+                    />
+                    <img
+                        src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios9.jpg?raw=true"
+                    />
+                    <img
+                        src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/ios10.jpg?raw=true"
+                    />
+                </section>
+            </section>
         </main>
-</body>
+    </body>
 </html>
