updated third year info and work experience

--- a/index.html
+++ b/index.html
@@ -85,6 +85,20 @@
                     developer. I collaborated with a talented team, gaining
                     valuable hands-on experience in game development.
                 </p>
+                <h3>
+                    Graduate Software Developer, Games Global: Jan 2025 -
+                    Current
+                </h3>
+                <p></p>
+                <p>
+                    <br />
+                    I am currently progressing in my graduate software developer
+                    role at Games Global, focusing on service development while
+                    extensively upskilling in AWS and C#. During my time here, I
+                    have contributed to the development of interactive gameplay
+                    features, collaborating with a talented team and gaining
+                    valuable hands-on experience in game development.
+                </p>
             </section>
         </main>
     </body>
