--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,8 @@
                     <li>R</li>
                     <li>Dart with Firebase</li>
                     <li>Delphi</li>
-                    <li>Javascript and PIXI.js</li>
+                    <li>Javascript/Typescript with PIXI.js</li>
+                    <li>C#</li>
                 </ul>
             </section>
 
