--- a/achievements.html
+++ b/achievements.html
@@ -1,36 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Achievements</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-</head>
-<body>
-    <aside class="sidebar">
-        <nav class="menu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="achievements.html">Achievements</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-            </ul>
-        </nav>
-        <div class="social-media">
-            <!-- Social media links -->
-            <a href="https://www.linkedin.com/in/diehan-drotschie-168a781b3/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href = "mailto: diehandrotschie@gmail.com" target = "_blank"> <i class = "fa fa-envelope"></i></a>
-        </div>
-    </aside>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Achievements</title>
+        <link rel="stylesheet" href="style.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        />
+    </head>
+    <body>
+        <aside class="sidebar">
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="achievements.html">Achievements</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                </ul>
+            </nav>
+            <div class="social-media">
+                <!-- Social media links -->
+                <a
+                    href="https://www.linkedin.com/in/diehan-drotschie-168a781b3/"
+                    target="_blank"
+                    ><i class="fab fa-linkedin-in"></i
+                ></a>
+                <a href="mailto: diehandrotschie@gmail.com" target="_blank">
+                    <i class="fa fa-envelope"></i
+                ></a>
+            </div>
+        </aside>
         <main>
             <!-- Section for intro heading -->
-        <section id="intro">
-            <h1>Achievements</h1>
-        </section>
+            <section id="intro">
+                <h1>Achievements</h1>
+            </section>
             <!-- Section for academic achievements-->
-        <section id ="academic">
-            <h2>Academic achievements</h2>
-            <p>School attented Robertson High School (2017-2021) | Highest Standard: Grade 12 (Senior Certificate) - 94%</p>
+            <section id="academic">
+                <h2>Academic achievements</h2>
+                <p>
+                    School attented Robertson High School (2017-2021) | Highest
+                    Standard: Grade 12 (Senior Certificate) - 94%
+                </p>
                 <ul>
                     <li>Robertson High School Dux Learners Award</li>
                     <li>Top 10 Achievers Award - Western Cape</li>
@@ -41,151 +53,215 @@
                     <li>Member of Golden Key International Society</li>
                     <li>Grade 12(Senior Certificate) Avg: 94.57%</li>
                 </ul>
-        </section>
+            </section>
             <!-- Section for culture achievements-->
-        <section id ="culture">
-            <h2>Culture achievements</h2>
-            <ul>
-                <li>CSV Team leader</li>
-            </ul>
-        </section>
-            <!-- Section for sports achievements -->
-        <section id = "sport">
-            <h2>Sports achievements</h2>
+            <section id="culture">
+                <h2>Culture achievements</h2>
                 <ul>
-                    <li>Hockey: 0/19 A First Team, Hockey Umpire, Qualified for Tour team to New Zealand</li>
+                    <li>CSV Team leader</li>
+                </ul>
+            </section>
+            <!-- Section for sports achievements -->
+            <section id="sport">
+                <h2>Sports achievements</h2>
+                <ul>
+                    <li>
+                        Hockey: 0/19 A First Team, Hockey Umpire, Qualified for
+                        Tour team to New Zealand
+                    </li>
                     <li>Athletics: Captain of Team</li>
                     <li>Swimming: School First Team, Captain of Team</li>
                 </ul>
-        </section>
+            </section>
 
-        <!-- Section for table for Uni marks-->
-        <section id="marks">
-            <h2>University Education</h2>
-            <p>Stellenbosch University 2022: Bsc Computer Science focal Area - Data Science</p>
+            <!-- Section for table for Uni marks-->
+            <section id="marks">
+                <h2>University Education</h2>
+                <p>
+                    Stellenbosch University 2022: Bsc Computer Science focal
+                    Area - Data Science
+                </p>
 
-            <h3>1st Year marks</h3>
-            <!-- table with marks of university of 1st year -->
-            <table>
-                <tr>
-                    <th>Subject</th>
-                    <th>Mark</th>
-                    <th>Remarks</th>
-                </tr>
+                <h3>1st Year marks</h3>
+                <!-- table with marks of university of 1st year -->
+                <table>
+                    <tr>
+                        <th>Subject</th>
+                        <th>Mark</th>
+                        <th>Remarks</th>
+                    </tr>
 
-                <tr>
-                    <td>Computer Science 114</td>
-                    <td>91</td>
-                    <td>Pass with desctinction</td>
-                </tr>
+                    <tr>
+                        <td>Computer Science 114</td>
+                        <td>91</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
 
-                <tr>
-                    <td>Mathematics 114</td>
-                    <td>83</td>
-                    <td>Pass with desctinction</td>
-                </tr>
+                    <tr>
+                        <td>Mathematics 114</td>
+                        <td>83</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
 
-                <tr>
-                    <td>Probability theory and Statistics 114</td>
-                    <td>77</td>
-                    <td>Pass with desctinction</td>
-                </tr>
+                    <tr>
+                        <td>Probability theory and Statistics 114</td>
+                        <td>77</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
 
-                <tr>
-                    <td>Science in Context 178</td>
-                    <td>77</td>
-                    <td>Pass with desctinction</td>
-                </tr>
+                    <tr>
+                        <td>Science in Context 178</td>
+                        <td>77</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
 
-                <tr>
-                    <td>Data Science 141</td>
-                    <td>81</td>
-                    <td>Pass with desctinction</td>
-                </tr>
+                    <tr>
+                        <td>Data Science 141</td>
+                        <td>81</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
 
-                <tr>
-                    <td>Computer Science 144</td>
-                    <td>94</td>
-                    <td>Pass with desctinction</td>
-                </tr>
+                    <tr>
+                        <td>Computer Science 144</td>
+                        <td>94</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
 
-                <tr>
-                    <td>Applied Mathematics 144</td>
-                    <td>88</td>
-                    <td>Pass with desctinction</td>
-                </tr>
+                    <tr>
+                        <td>Applied Mathematics 144</td>
+                        <td>88</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
 
-                <tr>
-                    <td>Mathematics 144</td>
-                    <td>84</td>
-                    <td>Pass with desctinction</td>
-                </tr>
-            </table>
+                    <tr>
+                        <td>Mathematics 144</td>
+                        <td>84</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
+                </table>
 
-            <h3>2nd Year marks</h3>
-            <!-- table with marks of university of 1st year -->
-            <table>
-                <tr>
-                    <th>Subject</th>
-                    <th>Mark</th>
-                    <th>Remarks</th>
-                </tr>
+                <h3>2nd Year marks</h3>
+                <!-- table with marks of university of 2nd year -->
+                <table>
+                    <tr>
+                        <th>Subject</th>
+                        <th>Mark</th>
+                        <th>Remarks</th>
+                    </tr>
 
-                <tr>
-                    <td>Computer Science 214</td>
-                    <td>80</td>
-                    <td>Pass with desctinction</td>
-                </tr>
+                    <tr>
+                        <td>Computer Science 214</td>
+                        <td>80</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
 
-                <tr>
-                    <td>Applied Mathematics 214</td>
-                    <td>85</td>
-                    <td>Pass with desctinction</td>
-                </tr>
+                    <tr>
+                        <td>Applied Mathematics 214</td>
+                        <td>85</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
 
-                <tr>
-                    <td>Mathematics 214</td>
-                    <td>84</td>
-                    <td>Pass with desctinction</td>
-                </tr>
+                    <tr>
+                        <td>Mathematics 214</td>
+                        <td>84</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
 
-                <tr>
-                    <td>Mathematical Statstics 214</td>
-                    <td>80</td>
-                    <td>Pass with desctinction</td>
-                </tr>
+                    <tr>
+                        <td>Mathematical Statstics 214</td>
+                        <td>80</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
 
-                <tr>
-                    <td>Computer Science 244</td>
-                    <td>76</td>
-                    <td>Pass with desctinction</td>
-                </tr>
+                    <tr>
+                        <td>Computer Science 244</td>
+                        <td>76</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
 
-                <tr>
-                    <td>Mathematics 244</td>
-                    <td>82</td>
-                    <td>Pass with desctinction</td>
-                </tr>
+                    <tr>
+                        <td>Mathematics 244</td>
+                        <td>82</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
 
-                <tr>
-                    <td>Mathematical Statistics 245</td>
-                    <td>60</td>
-                    <td>Pass</td>
-                </tr>
+                    <tr>
+                        <td>Mathematical Statistics 245</td>
+                        <td>60</td>
+                        <td>Pass</td>
+                    </tr>
 
-                <tr>
-                    <td>Mathematical Statistics 246</td>
-                    <td>85</td>
-                    <td>Pass with desctinction</td>
-                </tr>
+                    <tr>
+                        <td>Mathematical Statistics 246</td>
+                        <td>85</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
 
-                <tr>
-                    <td>Data Science 241</td>
-                    <td>76</td>
-                    <td>Pass with desctinction</td>
-                </tr>
-            </table>
-        </section>
+                    <tr>
+                        <td>Data Science 241</td>
+                        <td>76</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
+                </table>
+
+                <h3>3rd Year marks</h3>
+                <!-- table with marks of university of 3rd year -->
+                <table>
+                    <tr>
+                        <th>Subject</th>
+                        <th>Mark</th>
+                        <th>Remarks</th>
+                    </tr>
+
+                    <tr>
+                        <td>Computer Science 315</td>
+                        <td>83</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
+
+                    <tr>
+                        <td>Computer Science 314</td>
+                        <td>91</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
+
+                    <tr>
+                        <td>Mathematical Statistics 312</td>
+                        <td>73</td>
+                        <td>Pass</td>
+                    </tr>
+
+                    <tr>
+                        <td>Data Science 316</td>
+                        <td>82</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
+
+                    <tr>
+                        <td>Computer Science 343</td>
+                        <td>92</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
+
+                    <tr>
+                        <td>Computer Science 344</td>
+                        <td>86</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
+
+                    <tr>
+                        <td>Computer Science 345</td>
+                        <td>90</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
+
+                    <tr>
+                        <td>Data Science 346</td>
+                        <td>84</td>
+                        <td>Pass with desctinction</td>
+                    </tr>
+                </table>
+            </section>
         </main>
-</body>
+    </body>
 </html>
