updated summary information

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             <section id="summary">
                 <h2>Summary</h2>
                 <p>
-                    Dedicated and proactive Computer Science student with a
-                    strong foundation in software engineering principals and
-                    practices. Demonstrated ability to excel in both academic
-                    and practical setting, with experience in developing robust
-                    software solutions and participating in real-world projects.
+                    Dedicated and proactive Software Developer with a strong
+                    foundation in software engineering principles and practices.
+                    Demonstrated ability to excel in both academic and practical
+                    settings, with experience in developing robust software
+                    solutions and participating in real-world projects.
                     Proficient in various programming languages and frameworks,
-                    and commited to continuous learning and improvement.
+                    and committed to continuous learning and improvement.
                 </p>
             </section>
             <section id="about">
